Fix bar width on mobile view

--- a/m8.css
+++ b/m8.css
@@ -80,6 +80,7 @@ body {
     }
     .bar {
         box-shadow: none;
+        width: auto;
     }
     body {
         background: var(--background);
